--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
+    "prisma": "^6.11.1",
     "tsx": "^4.19.1"
   },
   "devDependencies": {
