--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "prisma": "^6.11.1",
